# ticketcontract

./: .gitignore  FRONTEND_ENDPOINT_INTEGRATION.md  floows.md  hh.html  hhh.md  struct.md  style.css
backend/: BACKEND_FEATURES.md  Cargo.toml  fllow.md
backend/docs/: bruno_collection.json  openapi.yaml  postman_collection.json
backend/scripts/: deploy-devnet.sh  migrate.sh  mongo-init.js  rotate-relayer-wallet.sh  seed.sh  smoke-devnet.sh
backend/seeds/: seed.js
backend/src/: app.rs  error.rs  lib.rs  main.rs
backend/src/config/: db.rs  environment.rs  mod.rs
backend/src/module/: mod.rs
backend/src/module/auth/: controller.rs  crud.rs  guard.rs  mod.rs  model.rs  route.rs  schema.rs
backend/src/module/chain/: controller.rs  route.rs  schema.rs
backend/src/module/checkin/: controller.rs  route.rs  schema.rs
backend/src/module/delivery/: controller.rs  route.rs
backend/src/module/disputes/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
backend/src/module/event/: controller.rs  crud.rs  (+3 more)
backend/src/service/: auth_service.rs  chain_service.rs  health_service.rs  idempotency_service.rs  indexer_service.rs  kpi_service.rs  mod.rs  ops_service.rs  resale_compiler_service.rs  underwriting_service.rs
backend/tests/: auth_integration.rs  chain_integration.rs  disputes_loyalty_trust_integration.rs  indexer_kpi_integration.rs  ops_delivery_e2e_integration.rs  organizer_event_integration.rs  protocol_admin_integration.rs  secondary_sale_financing_integration.rs  settlement_checkin_integration.rs  ticket_class_primary_sale_integration.rs  ticket_state_resale_policy_integration.rs  underwriting_resale_compiler_integration.rs
smartcontract/programs/ticketing_core/: Cargo.toml
(+309 files in other folders)
