[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
config = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mongodb = "3"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
bs58 = "0.5"
base64 = "0.22"
ed25519-dalek = "2"
solana-sdk = "2.3.1"
hex = "0.4"
bincode = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
