[package]
name = "ticketing_core"
version = "0.1.0"
description = "Ticketing core program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketing_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[dev-dependencies]
solana-program-test = "2.3.7"
solana-program-entrypoint = "2.3.0"
solana-sdk = "2.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
